# putitoutthere

./: .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  MIGRATIONS.md  README.md  action.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  putitoutthere.toml  vitest.config.ts
.claude/: settings.json
.github/: BRANCH_PROTECTION.md  dependabot.yml
canary/: README.md  _strip-package.py  putitoutthere.toml
canary/rust/: Cargo.toml
canary/rust/src/: lib.rs
dist-action/: index.js
docs/: AGENTS.md  getting-started.md  index.md  pnpm-lock.yaml
evals/: README.md  run-matrix.sh  run-n.sh  spike.sh
migrations/: PLAN_GAPS.md  README.md  UpscalerJS.md  _template.md  cachetta.md  curtaincall.md  gbnf.md  karat.md  skillet.md
notes/: design-commitments.md  gates.md  upstream-behaviors.md
src/: action.test.ts  action.ts  advance-floating-major.ts  auth.test.ts  auth.ts  cascade.test.ts  cascade.ts  check-crate-size.test.ts  check-crate-size.ts  check.test.ts  check.ts  cli-bin.test.ts  cli-release-github.test.ts  cli-verify-bundle-cli.test.ts  cli-verify-npm-tarball.test.ts  cli-verify-wheel.test.ts  cli.test.ts  cli.ts  completeness.test.ts  completeness.ts  config.test.ts  config.ts  doctor.test.ts  doctor.ts  download-npm-tarball.test.ts  download-npm-tarball.ts  ensure-tag.ts  env.test.ts  env.ts  (+82 more)
test/fixtures/python-pure-sdist-only/: putitoutthere.toml  pyproject.toml
test/fixtures/rust-vanilla-first-publish/: Cargo.toml  putitoutthere.toml
test/fixtures/rust-vanilla-first-publish/.github/workflows/: release.yml
test/fixtures/rust-vanilla-first-publish/src/: lib.rs
(+302 files in other folders)
