[package]
name = "piot-canary"
version = "__VERSION__"
edition = "2021"
license = "MIT"
description = "Put It Out There weekly canary against real crates.io. Re-published with a fresh timestamp version each run; safe to ignore. See https://github.com/thekevinscott/putitoutthere/issues/297."
repository = "https://github.com/thekevinscott/putitoutthere"

[lib]
path = "src/lib.rs"
