[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "piot-fixture-zzz-python-sdist"
dynamic = ["version"]
description = "Put It Out There canary fixture. Safe to ignore."
license = { text = "MIT" }

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
